--- a/apps/frontend/src/app/components/documentWidget/seeDocumentDialog/see-document-dialog.component.html
+++ b/apps/frontend/src/app/components/documentWidget/seeDocumentDialog/see-document-dialog.component.html
@@ -3,12 +3,7 @@
     <div>
       <div class="title-container">
         <h2>{{ document?.title }}</h2>
-        <button
-          class="secondary-btn"
-          mat-raised-button
-          mat-dialog-close
-          type="button"
-        >
+        <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">
           Close
         </button>
       </div>
