--- a/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
@@ -1,45 +1,23 @@
-<form
-  [formGroup]="createAssignmentForm"
-  (ngSubmit)="onSubmit()"
-  class="dialog-container"
->
+<form [formGroup]="createAssignmentForm" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Add assignment</h1>
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field  autocomplete="off">
+    <mat-form-field autocomplete="off">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createAssignmentForm.get('room')?.invalid &&
-          createAssignmentForm.get('room')?.dirty
-        "
+        *ngIf="createAssignmentForm.get('room')?.invalid && createAssignmentForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field  autocomplete="off">
+    <mat-form-field autocomplete="off">
       <mat-label>Task</mat-label>
-      <input
-        #task
-        type="text"
-        formControlName="task"
-        matInput
-        placeholder="RA"
-      />
+      <input #task type="text" formControlName="task" matInput placeholder="RA" />
       <mat-error
-        *ngIf="
-          createAssignmentForm.get('task')?.invalid &&
-          createAssignmentForm.get('task')?.dirty
-        "
+        *ngIf="createAssignmentForm.get('task')?.invalid && createAssignmentForm.get('task')?.dirty"
       >
         Can't be more than 20 characters
       </mat-error>
@@ -47,15 +25,9 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Received by</mat-label>
-      <input
-        #receivedBy
-        type="text"
-        formControlName="receivedBy"
-        matInput
-        placeholder="TJ"
-      />
+      <input #receivedBy type="text" formControlName="receivedBy" matInput placeholder="TJ" />
       <mat-error
         *ngIf="
           createAssignmentForm.get('receivedBy')?.invalid &&
@@ -66,7 +38,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Performed by</mat-label>
       <input
         #performedBy
@@ -109,7 +81,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
@@ -120,8 +92,7 @@
     ></textarea>
     <mat-error
       *ngIf="
-        createAssignmentForm.get('comments')?.invalid &&
-        createAssignmentForm.get('comments')?.dirty
+        createAssignmentForm.get('comments')?.invalid && createAssignmentForm.get('comments')?.dirty
       "
     >
       Can't be more than 1000 characters
@@ -129,16 +100,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <button
-      class="secondary-btn"
-      mat-raised-button
-      mat-dialog-close
-      type="button"
-    >
-      Cancel
-    </button>
-    <button class="action-btn" mat-raised-button type="submit">
-      Add assignment
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
+    <button class="action-btn" mat-raised-button type="submit">Add assignment</button>
   </div>
 </form>
