--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -1,53 +1,30 @@
-<form
-  [formGroup]="updateAssignmentForm"
-  (ngSubmit)="onSubmit()"
-  class="dialog-container"
->
+<form [formGroup]="updateAssignmentForm" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Update assignment</h1>
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-        maxlength="10"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" maxlength="10" />
       <mat-error
-        *ngIf="
-          updateAssignmentForm.get('room')?.invalid &&
-          updateAssignmentForm.get('room')?.dirty
-        "
+        *ngIf="updateAssignmentForm.get('room')?.invalid && updateAssignmentForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Task</mat-label>
-      <input
-        #task
-        type="text"
-        formControlName="task"
-        matInput
-        placeholder="RA"
-      />
+      <input #task type="text" formControlName="task" matInput placeholder="RA" />
       <mat-error
-        *ngIf="
-          updateAssignmentForm.get('task')?.invalid &&
-          updateAssignmentForm.get('task')?.dirty
-        "
+        *ngIf="updateAssignmentForm.get('task')?.invalid && updateAssignmentForm.get('task')?.dirty"
       >
         Can't be more than 20 characters
       </mat-error>
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
@@ -58,8 +35,7 @@
     ></textarea>
     <mat-error
       *ngIf="
-        updateAssignmentForm.get('comments')?.invalid &&
-        updateAssignmentForm.get('comments')?.dirty
+        updateAssignmentForm.get('comments')?.invalid && updateAssignmentForm.get('comments')?.dirty
       "
     >
       Can't be more than 1000 characters
@@ -67,15 +43,9 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Received by</mat-label>
-      <input
-        #receivedBy
-        type="text"
-        formControlName="receivedBy"
-        matInput
-        placeholder="FV"
-      />
+      <input #receivedBy type="text" formControlName="receivedBy" matInput placeholder="FV" />
       <mat-error
         *ngIf="
           updateAssignmentForm.get('receivedBy')?.invalid &&
@@ -86,7 +56,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Performed by</mat-label>
       <input
         #performedBy
@@ -130,14 +100,7 @@
   </div>
 
   <div class="dialog-row">
-    <button
-      class="secondary-btn"
-      mat-raised-button
-      mat-dialog-close
-      type="button"
-    >
-      Cancel
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
     <button class="action-btn" mat-raised-button type="submit">Update</button>
   </div>
 </form>
