--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -1,11 +1,7 @@
 <main>
   <div class="table-actions">
     <div>
-      <mat-form-field
-        autocomplete="off"
-        class="remove-error-message"
-        
-      >
+      <mat-form-field autocomplete="off" class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
@@ -17,11 +13,7 @@
         />
       </mat-form-field>
 
-      <mat-form-field
-        
-        style="width: 150px"
-        class="remove-error-message"
-      >
+      <mat-form-field style="width: 150px" class="remove-error-message">
         <mat-label>Sort By</mat-label>
         <mat-select [(value)]="sortBy" (selectionChange)="fetchBikeList()">
           <mat-option value="createdAt">Created at</mat-option>
@@ -36,14 +28,8 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
-      <button
-        class="action-btn"
-        (click)="openCreateBikeDialog()"
-        mat-raised-button
-      >
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button class="action-btn" (click)="openCreateBikeDialog()" mat-raised-button>
         Add Bike
       </button>
     </div>
@@ -54,104 +40,61 @@
     <table mat-table [dataSource]="filteredBikeList">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.room }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.name }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="reservedBy">
         <th mat-header-cell *matHeaderCellDef>Reserved by</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.reservedBy }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="nrOfBikes">
         <th mat-header-cell *matHeaderCellDef>Nr. of bikes</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.nrOfBikes }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pickUpTime">
         <th mat-header-cell *matHeaderCellDef>Pick up time</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.pickUpTime
-              ? (element.pickUpTime | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.pickUpTime ? (element.pickUpTime | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Returned</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.completedAt
-              ? (element.completedAt | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.completedAt ? (element.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.comments ? element.comments : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bikeFormCompleted">
-        <th mat-header-cell *matHeaderCellDef style="width: 80px">
-          Bike form <br />completed
-        </th>
+        <th mat-header-cell *matHeaderCellDef style="width: 80px">Bike form <br />completed</th>
         <td mat-cell *matCellDef="let element">
           <label class="checkbox-container car-checkbox">
             <input
               type="checkbox"
               [checked]="element.bikeFormCompleted"
-              (change)="
-                updateBikeFormCompleted(
-                  element.bikeId,
-                  element.bikeFormCompleted
-                )
-              "
+              (change)="updateBikeFormCompleted(element.bikeId, element.bikeFormCompleted)"
             />
             <span class="checkmark" style="top: 0; margin-left: 20px"></span>
           </label>
