--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -2,7 +2,7 @@
 <main>
   <div class="table-actions">
     <div>
-      <mat-form-field  class="remove-error-message">
+      <mat-form-field class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
@@ -13,12 +13,7 @@
           matInput
         />
       </mat-form-field>
-      <mat-form-field
-        autocomplete="off"
-        
-        style="width: 150px"
-        class="remove-error-message"
-      >
+      <mat-form-field autocomplete="off" style="width: 150px" class="remove-error-message">
         <mat-label>Sort by</mat-label>
         <mat-select [(value)]="sortBy" (selectionChange)="fetchLuggage()">
           <mat-option value="arrivalTime">Time of arrival</mat-option>
@@ -31,14 +26,8 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
-      <button
-        mat-raised-button
-        class="action-btn"
-        (click)="openCheckinCreateDialog()"
-      >
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="action-btn" (click)="openCheckinCreateDialog()">
         Add Check In
       </button>
     </div>
