--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -1,26 +1,13 @@
-<form
-  (ngSubmit)="onSubmit()"
-  [formGroup]="createCheckinForm"
-  class="dialog-container"
->
+<form (ngSubmit)="onSubmit()" [formGroup]="createCheckinForm" class="dialog-container">
   <h1>Create check in</h1>
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" >
+    <mat-form-field autocomplete="off" class="input">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('room')?.invalid &&
-          createCheckinForm.get('room')?.dirty
-        "
+        *ngIf="createCheckinForm.get('room')?.invalid && createCheckinForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
@@ -28,68 +15,36 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Time of Arrival</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="time"
-        formControlName="arrivalTime"
-      />
+      <input onclick="this.showPicker()" matInput type="time" formControlName="arrivalTime" />
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Name</mat-label>
-    <input
-      #name
-      type="text"
-      formControlName="name"
-      matInput
-      placeholder="Johnson"
-    />
+    <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
     <mat-error
-      *ngIf="
-        createCheckinForm.get('name')?.invalid &&
-        createCheckinForm.get('name')?.dirty
-      "
+      *ngIf="createCheckinForm.get('name')?.invalid && createCheckinForm.get('name')?.dirty"
     >
       Required
     </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('bags')?.invalid &&
-          createCheckinForm.get('bags')?.dirty
-        "
+        *ngIf="createCheckinForm.get('bags')?.invalid && createCheckinForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Tag nr</mat-label>
-      <input
-        #tagNr
-        type="number"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('tagNr')?.invalid &&
-          createCheckinForm.get('tagNr')?.dirty
-        "
+        *ngIf="createCheckinForm.get('tagNr')?.invalid && createCheckinForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -97,38 +52,22 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="FV"
-      />
+      <input #bbLr type="text" formControlName="bbLr" matInput placeholder="FV" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('bbLr')?.invalid &&
-          createCheckinForm.get('bbLr')?.dirty
-        "
+        *ngIf="createCheckinForm.get('bbLr')?.invalid && createCheckinForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" class="input" >
+    <mat-form-field autocomplete="off" class="input">
       <mat-label>Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
+      <input #location type="text" formControlName="location" matInput placeholder="LR1" />
       <mat-error
         *ngIf="
-          createCheckinForm.get('location')?.invalid &&
-          createCheckinForm.get('location')?.dirty
+          createCheckinForm.get('location')?.invalid && createCheckinForm.get('location')?.dirty
         "
       >
         Required
@@ -137,14 +76,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" >
+    <mat-form-field autocomplete="off" class="input">
       <mat-label>BB Out</mat-label>
       <input type="text" formControlName="bbOut" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('bbOut')?.invalid &&
-          createCheckinForm.get('bbOut')?.dirty
-        "
+        *ngIf="createCheckinForm.get('bbOut')?.invalid && createCheckinForm.get('bbOut')?.dirty"
       >
         Required
       </mat-error>
@@ -152,40 +88,23 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>In room time</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="time"
-        formControlName="completedAt"
-      />
+      <input onclick="this.showPicker()" matInput type="time" formControlName="completedAt" />
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" class="full-width" >
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
-    <textarea
-      type="text"
-      formControlName="comments"
-      matInput
-      placeholder="Comments"
-    ></textarea>
+    <textarea type="text" formControlName="comments" matInput placeholder="Comments"></textarea>
     <mat-error
-      *ngIf="
-        createCheckinForm.get('comments')?.invalid &&
-        createCheckinForm.get('comments')?.dirty
-      "
+      *ngIf="createCheckinForm.get('comments')?.invalid && createCheckinForm.get('comments')?.dirty"
     >
       Can't be more than 1000 characters
     </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
-    <button mat-raised-button class="secondary-btn" mat-dialog-close>
-      Cancel
-    </button>
+    <button mat-raised-button class="secondary-btn" mat-dialog-close>Cancel</button>
 
-    <button mat-raised-button class="action-btn" type="submit">
-      Add check in
-    </button>
+    <button mat-raised-button class="action-btn" type="submit">Add check in</button>
   </div>
 </form>
