--- a/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
@@ -3,15 +3,9 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" >
+    <mat-form-field autocomplete="off" class="input">
       <mat-label class="input-label">Room nr.</mat-label>
-      <input
-        #room
-        type="text"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="text" formControlName="room" matInput placeholder="123" />
       <mat-error *ngIf="form.get('room')?.invalid && form.get('room')?.dirty">
         Must be a number from 100-999
       </mat-error>
@@ -19,53 +13,26 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Time of arrival</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="time"
-        formControlName="arrivalTime"
-      />
+      <input onclick="this.showPicker()" matInput type="time" formControlName="arrivalTime" />
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Name</mat-label>
-    <input
-      #name
-      type="text"
-      formControlName="name"
-      matInput
-      placeholder="John Doe"
-    />
-    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty">
-      Required
-    </mat-error>
+    <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
+    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
-      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty">
-        Required
-      </mat-error>
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
+      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Tag nr.</mat-label>
-      <input
-        #tagNr
-        type="number"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
       <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
         Required
       </mat-error>
@@ -73,32 +40,16 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="JD"
-      />
-      <mat-error *ngIf="form.get('bbLr')?.invalid && form.get('bbLr')?.dirty">
-        Required
-      </mat-error>
+      <input #bbLr type="text" formControlName="bbLr" matInput placeholder="JD" />
+      <mat-error *ngIf="form.get('bbLr')?.invalid && form.get('bbLr')?.dirty"> Required </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
-      <mat-error
-        *ngIf="form.get('location')?.invalid && form.get('location')?.dirty"
-      >
+      <input #location type="text" formControlName="location" matInput placeholder="LR1" />
+      <mat-error *ngIf="form.get('location')?.invalid && form.get('location')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
@@ -107,29 +58,17 @@
   <div class="dialog-row">
     <mat-form-field class="remove-error-message">
       <mat-label>In room time</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="time"
-        formControlName="completedAt"
-      />
+      <input onclick="this.showPicker()" matInput type="time" formControlName="completedAt" />
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
-    <input
-      type="text"
-      formControlName="comments"
-      matInput
-      placeholder="Comments"
-    />
+    <input type="text" formControlName="comments" matInput placeholder="Comments" />
   </mat-form-field>
 
   <div class="dialog-row">
-    <button class="secondary-btn" mat-raised-button mat-dialog-close>
-      Cancel
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close>Cancel</button>
     <button mat-raised-button type="submit" class="action-btn">Update</button>
   </div>
 </form>
