--- a/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
@@ -1,104 +1,55 @@
-<form
-  (ngSubmit)="onSubmit()"
-  [formGroup]="updateCheckoutForm"
-  class="dialog-container"
->
+<form (ngSubmit)="onSubmit()" [formGroup]="updateCheckoutForm" class="dialog-container">
   <h1>Update Check Out</h1>
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('name')?.invalid &&
-          updateCheckoutForm.get('name')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('name')?.invalid && updateCheckoutForm.get('name')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bags')?.invalid &&
-          updateCheckoutForm.get('bags')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bags')?.invalid && updateCheckoutForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Name</mat-label>
-    <input
-      #name
-      type="text"
-      formControlName="name"
-      matInput
-      placeholder="John Doe"
-    />
+    <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
     <mat-error
-      *ngIf="
-        updateCheckoutForm.get('name')?.invalid &&
-        updateCheckoutForm.get('name')?.dirty
-      "
+      *ngIf="updateCheckoutForm.get('name')?.invalid && updateCheckoutForm.get('name')?.dirty"
     >
       Required
     </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Tag nr.</mat-label>
-      <input
-        #tagNr
-        type="number"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('tagNr')?.invalid &&
-          updateCheckoutForm.get('tagNr')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('tagNr')?.invalid && updateCheckoutForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>BB down</mat-label>
-      <input
-        #bbDown
-        type="text"
-        formControlName="bbDown"
-        matInput
-        placeholder="JD"
-      />
+      <input #bbDown type="text" formControlName="bbDown" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bbDown')?.invalid &&
-          updateCheckoutForm.get('bbDown')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bbDown')?.invalid && updateCheckoutForm.get('bbDown')?.dirty"
       >
         Required
       </mat-error>
@@ -106,39 +57,23 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
+      <input #location type="text" formControlName="location" matInput placeholder="LR1" />
       <mat-error
         *ngIf="
-          updateCheckoutForm.get('location')?.invalid &&
-          updateCheckoutForm.get('location')?.dirty
+          updateCheckoutForm.get('location')?.invalid && updateCheckoutForm.get('location')?.dirty
         "
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="JD"
-      />
+      <input #bbLr type="text" formControlName="bbLr" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bbLr')?.invalid &&
-          updateCheckoutForm.get('bbLr')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bbLr')?.invalid && updateCheckoutForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
@@ -146,14 +81,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label>BB out</mat-label>
       <input type="text" formControlName="bbOut" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bbOut')?.invalid &&
-          updateCheckoutForm.get('bbOut')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bbOut')?.invalid && updateCheckoutForm.get('bbOut')?.dirty"
       >
         Required
       </mat-error>
@@ -161,31 +93,17 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Time out</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="time"
-        formControlName="completedAt"
-      />
+      <input onclick="this.showPicker()" matInput type="time" formControlName="completedAt" />
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
-    <textarea
-      type="text"
-      formControlName="comments"
-      matInput
-      placeholder="Comments"
-    ></textarea>
+    <textarea type="text" formControlName="comments" matInput placeholder="Comments"></textarea>
   </mat-form-field>
 
   <div class="dialog-row">
-    <button mat-raised-button class="secodary-btn" mat-dialog-close>
-      Cancel
-    </button>
-    <button mat-raised-button class="secondary-btn" type="submit">
-      Update
-    </button>
+    <button mat-raised-button class="secodary-btn" mat-dialog-close>Cancel</button>
+    <button mat-raised-button class="secondary-btn" type="submit">Update</button>
   </div>
 </form>
