--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="actions">
     <div>
-      <mat-form-field  class="remove-error-message">
+      <mat-form-field class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
@@ -12,12 +12,7 @@
           matInput
         />
       </mat-form-field>
-      <mat-form-field
-        autocomplete="off"
-        
-        style="width: 150px"
-        class="remove-error-message"
-      >
+      <mat-form-field autocomplete="off" style="width: 150px" class="remove-error-message">
         <mat-label>Sort by</mat-label>
         <mat-select [(value)]="sortBy" (selectionChange)="fetchDocuments()">
           <mat-option value="title">Title</mat-option>
@@ -28,11 +23,7 @@
       </mat-form-field>
     </div>
 
-    <button
-      mat-raised-button
-      class="action-btn"
-      (click)="openCreateDocumentDialog()"
-    >
+    <button mat-raised-button class="action-btn" (click)="openCreateDocumentDialog()">
       Add document
     </button>
   </div>
