--- a/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
@@ -1,27 +1,13 @@
-<form
-  [formGroup]="createLongTermForm"
-  (ngSubmit)="onSubmit()"
-  class="dialog-container"
->
+<form [formGroup]="createLongTermForm" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Add long term</h1>
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field >
+    <mat-form-field>
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-        maxlength="10"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" maxlength="10" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('room')?.invalid &&
-          createLongTermForm.get('room')?.dirty
-        "
+        *ngIf="createLongTermForm.get('room')?.invalid && createLongTermForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
@@ -39,43 +25,21 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label class="input-label">Name</mat-label>
-      <input
-        #name
-        type="text"
-        formControlName="name"
-        matInput
-        placeholder="John Doe"
-      />
+      <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('name')?.invalid &&
-          createLongTermForm.get('name')?.dirty
-        "
+        *ngIf="createLongTermForm.get('name')?.invalid && createLongTermForm.get('name')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('bags')?.invalid &&
-          createLongTermForm.get('bags')?.dirty
-        "
+        *ngIf="createLongTermForm.get('bags')?.invalid && createLongTermForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
@@ -83,24 +47,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">Tag nr</mat-label>
-      <input
-        #tagNr
-        type="text"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="text" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('tagNr')?.invalid &&
-          createLongTermForm.get('tagNr')?.dirty
-        "
+        *ngIf="createLongTermForm.get('tagNr')?.invalid && createLongTermForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -118,42 +69,22 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="JD"
-      />
+      <input #bbLr type="text" formControlName="bbLr" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('bbLr')?.invalid &&
-          createLongTermForm.get('bbLr')?.dirty
-        "
+        *ngIf="createLongTermForm.get('bbLr')?.invalid && createLongTermForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" class="input" >
+    <mat-form-field autocomplete="off" class="input">
       <mat-label class="input-label">Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
+      <input #location type="text" formControlName="location" matInput placeholder="LR1" />
       <mat-error
         *ngIf="
-          createLongTermForm.get('location')?.invalid &&
-          createLongTermForm.get('location')?.dirty
+          createLongTermForm.get('location')?.invalid && createLongTermForm.get('location')?.dirty
         "
       >
         Required
@@ -161,7 +92,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field  class="full-width">
+  <mat-form-field class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
@@ -173,16 +104,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <button
-      class="secondary-btn"
-      mat-raised-button
-      mat-dialog-close
-      type="button"
-    >
-      Cancel
-    </button>
-    <button class="action-btn" mat-raised-button type="submit">
-      Add long term
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
+    <button class="action-btn" mat-raised-button type="submit">Add long term</button>
   </div>
 </form>
