--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="table-actions">
     <div>
-      <mat-form-field  class="remove-error-message">
+      <mat-form-field class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
@@ -12,12 +12,7 @@
           matInput
         />
       </mat-form-field>
-      <mat-form-field
-        autocomplete="off"
-        
-        style="width: 150px"
-        class="remove-error-message"
-      >
+      <mat-form-field autocomplete="off" style="width: 150px" class="remove-error-message">
         <mat-label>Sort by</mat-label>
         <mat-select [(value)]="sortBy" (selectionChange)="fetchLuggage()">
           <mat-option value="arrivalTime">Date in</mat-option>
@@ -31,17 +26,11 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
       <button class="secondary-btn" (click)="toggleShowAll()" mat-raised-button>
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
-      <button
-        mat-raised-button
-        class="action-btn"
-        (click)="createLongTermEntry()"
-      >
+      <button mat-raised-button class="action-btn" (click)="createLongTermEntry()">
         Add long term
       </button>
     </div>
@@ -91,11 +80,7 @@
       <ng-container matColumnDef="dateNeeded">
         <th mat-header-cell *matHeaderCellDef>Date needed</th>
         <td mat-cell *matCellDef="let luggage">
-          {{
-            luggage.dateNeeded
-              ? (luggage.dateNeeded | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+          {{ luggage.dateNeeded ? (luggage.dateNeeded | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
@@ -121,11 +106,7 @@
       <ng-container matColumnDef="dateOut">
         <th mat-header-cell *matHeaderCellDef>Date out</th>
         <td mat-cell *matCellDef="let luggage">
-          {{
-            luggage.completedAt
-              ? (luggage.completedAt | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+          {{ luggage.completedAt ? (luggage.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
