--- a/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
@@ -1,72 +1,36 @@
-<form
-  [formGroup]="updateLongTermForm"
-  (ngSubmit)="onSubmit()"
-  class="dialog-container"
->
+<form [formGroup]="updateLongTermForm" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Update long term</h1>
   <hr />
 
   <!-- Date in -->
   <div class="dialog-row"></div>
 
-  <mat-form-field autocomplete="off"  class="full-width">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Room nr.</mat-label>
-    <input
-      #room
-      type="number"
-      formControlName="room"
-      matInput
-      placeholder="123"
-      maxlength="10"
-    />
+    <input #room type="number" formControlName="room" matInput placeholder="123" maxlength="10" />
     <mat-error
-      *ngIf="
-        updateLongTermForm.get('room')?.invalid &&
-        updateLongTermForm.get('room')?.dirty
-      "
+      *ngIf="updateLongTermForm.get('room')?.invalid && updateLongTermForm.get('room')?.dirty"
     >
       Must be a number from 100-999
     </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" >
+    <mat-form-field autocomplete="off">
       <mat-label class="input-label">Name</mat-label>
-      <input
-        #name
-        type="text"
-        formControlName="name"
-        matInput
-        placeholder="John Doe"
-      />
+      <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('name')?.invalid &&
-          updateLongTermForm.get('name')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('name')?.invalid && updateLongTermForm.get('name')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('bags')?.invalid &&
-          updateLongTermForm.get('bags')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('bags')?.invalid && updateLongTermForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
@@ -74,24 +38,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">Tag nr</mat-label>
-      <input
-        #tagNr
-        type="text"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="text" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('tagNr')?.invalid &&
-          updateLongTermForm.get('tagNr')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('tagNr')?.invalid && updateLongTermForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -109,42 +60,22 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="JD"
-      />
+      <input #bbLr type="text" formControlName="bbLr" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('bbLr')?.invalid &&
-          updateLongTermForm.get('bbLr')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('bbLr')?.invalid && updateLongTermForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" class="input" >
+    <mat-form-field autocomplete="off" class="input">
       <mat-label class="input-label">Location</mat-label>
-      <input
-        #location
-        type="text"
-        formControlName="location"
-        matInput
-        placeholder="LR1"
-      />
+      <input #location type="text" formControlName="location" matInput placeholder="LR1" />
       <mat-error
         *ngIf="
-          updateLongTermForm.get('location')?.invalid &&
-          updateLongTermForm.get('location')?.dirty
+          updateLongTermForm.get('location')?.invalid && updateLongTermForm.get('location')?.dirty
         "
       >
         Required
@@ -153,24 +84,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      
-    >
+    <mat-form-field autocomplete="off" class="input one-third">
       <mat-label class="input-label">BB out</mat-label>
-      <input
-        #bbOut
-        type="text"
-        formControlName="bbOut"
-        matInput
-        placeholder="JD"
-      />
+      <input #bbOut type="text" formControlName="bbOut" matInput placeholder="JD" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('bbOut')?.invalid &&
-          updateLongTermForm.get('bbOut')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('bbOut')?.invalid && updateLongTermForm.get('bbOut')?.dirty"
       >
         Required
       </mat-error>
@@ -178,16 +96,11 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Date Out</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="datetime-local"
-        formControlName="dateOut"
-      />
+      <input onclick="this.showPicker()" matInput type="datetime-local" formControlName="dateOut" />
     </mat-form-field>
   </div>
 
-  <mat-form-field  class="full-width">
+  <mat-form-field class="full-width">
     <mat-label>Description</mat-label>
     <textarea
       #comments
@@ -199,14 +112,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <button
-      class="secondary-btn"
-      mat-raised-button
-      mat-dialog-close
-      type="button"
-    >
-      Cancel
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
     <button class="action-btn" mat-raised-button type="submit">Update</button>
   </div>
 </form>
