--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -10,12 +10,7 @@
   --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
   --main-blue-lowest-opacity: rgba(47, 47, 162, 0.1);
-  --action-gradient: linear-gradient(
-    192.45deg,
-    #f64c72 0%,
-    #f64c72 0%,
-    #fa7b34 100%
-  );
+  --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
 }
 
 html,
