re-remove input background

--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -4,7 +4,7 @@
     <div>
       <mat-form-field
         autocomplete="off"
-        appearance="fill"
+        
         style="width: 150px"
         class="remove-error-message"
       >
@@ -18,7 +18,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" class="remove-error-message">
+      <mat-form-field  class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
