--- a/apps/frontend/src/app/pages/login/login.component.html
+++ b/apps/frontend/src/app/pages/login/login.component.html
@@ -7,12 +7,12 @@
     </div>
     <div class="dialog-row"></div>
 
-    <mat-form-field appearance="fill" autocomplete="off" class="full-width no-margin white-input">
+    <mat-form-field  autocomplete="off" class="full-width no-margin white-input">
       <mat-label>Email</mat-label>
       <input #email type="email" formControlName="email" matInput placeholder="Email" />
     </mat-form-field>
 
-    <mat-form-field appearance="fill" autocomplete="off" class="full-width no-margin white-input">
+    <mat-form-field  autocomplete="off" class="full-width no-margin white-input">
       <mat-label>Password</mat-label>
       <input #password type="password" formControlName="password" matInput placeholder="Password" />
     </mat-form-field>
