--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -84,7 +84,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label>BB Up</mat-label>
       <mat-select formControlName="bbOut">
         <mat-option *ngFor="let initials of bbInitials" [value]="initials">
