--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -3,7 +3,7 @@
     <div>
       <mat-form-field
         autocomplete="off"
-        appearance="fill"
+        
         style="width: 150px"
         class="remove-error-message"
       >
@@ -16,7 +16,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" class="remove-error-message">
+      <mat-form-field  class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
