Rename dialog fields back to their original value

--- a/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
@@ -66,7 +66,7 @@
 
   <div class="dialog-row">
     <mat-form-field class="remove-error-message">
-      <mat-label>Received At</mat-label>
+      <mat-label>Time received</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
@@ -76,7 +76,7 @@
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
-      <mat-label>Completed At</mat-label>
+      <mat-label>Time performed</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
