--- a/apps/frontend/src/app/pages/bikes/createBikeEntryDialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/createBikeEntryDialog/create-bike-dialog.component.html
@@ -58,7 +58,7 @@
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
-      <mat-label>Completed At</mat-label>
+      <mat-label>Returned</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
