--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -84,7 +84,7 @@
 
   <div class="dialog-row">
     <mat-form-field class="remove-error-message">
-      <mat-label>Received At</mat-label>
+      <mat-label>Time received</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
@@ -94,7 +94,7 @@
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
-      <mat-label>Completed At</mat-label>
+      <mat-label>Time performed</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
