Rename Time received to Requested at

--- a/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
@@ -66,7 +66,7 @@
 
   <div class="dialog-row">
     <mat-form-field class="remove-error-message">
-      <mat-label>Time received</mat-label>
+      <mat-label>Requested at</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
