--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -20,12 +20,7 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Date in</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="datetime-local"
-        formControlName="dateIn"
-      />
+      <input onclick="this.showPicker()" matInput type="datetime-local" formControlName="dateIn" />
     </mat-form-field>
   </div>
 
