fix sidenav height

--- a/apps/frontend/src/app/app.component.scss
+++ b/apps/frontend/src/app/app.component.scss
@@ -8,6 +8,7 @@
   box-shadow: -7px 0px 24px 8px rgba(0, 0, 0, 0.15);
   color: white;
   background-color: var(--main-blue);
+  max-height: 100vh;
   // transition: 0.3s;
 
   .toggle-btn {
