--- a/apps/frontend/src/app/app.component.scss
+++ b/apps/frontend/src/app/app.component.scss
@@ -1,5 +1,7 @@
 .body-container {
-  height: 100vh;
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: 100%;
 }
 
@@ -9,6 +11,8 @@
   color: white;
   background-color: var(--main-blue);
   max-height: 100vh;
+  position: absolute;
+  top: 0;
   // transition: 0.3s;
 
   .toggle-btn {
