feat: 🎸 replace logo and upgrade login styling

--- a/apps/frontend/src/app/pages/login/login.component.html
+++ b/apps/frontend/src/app/pages/login/login.component.html
@@ -1,11 +1,6 @@
 <div id="content-wrapper">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="login-form">
-    <div class="title-wrapper">
-      <span class="title">OMNIHOST</span>
-      <hr />
-      <span class="subtitle"> Systems</span>
-    </div>
-    <div class="dialog-row"></div>
+    <img class="title-wrapper" src="../../../../assets/full-omni-logo-white-background@svg.svg" />
 
     <mat-form-field autocomplete="off" class="full-width no-margin white-input">
       <mat-label>Email</mat-label>
@@ -17,7 +12,7 @@
       <input #password type="password" formControlName="password" matInput placeholder="Password" />
     </mat-form-field>
 
-    <button class="action-btn half-width" mat-raised-button type="submit">
+    <button class="action-btn" mat-raised-button type="submit">
       <div *ngIf="!isLoading">Login</div>
       <div *ngIf="isLoading" class="btn-spinner">
         <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
