--- a/apps/frontend/src/app/pages/login/login.component.scss
+++ b/apps/frontend/src/app/pages/login/login.component.scss
@@ -1,33 +1,15 @@
-#content-wrapper {
+section {
   background-color: var(--main-blue);
   height: 100vh;
   width: 100vw;
-  margin: 0;
-  color: white;
 
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.title-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
+img {
   margin-bottom: 20px;
-
-  .title {
-    font-size: xx-large;
-  }
-  .subtitle {
-    font-size: x-large;
-  }
-  hr {
-    width: 100%;
-  }
 }
 
 #login-form {
@@ -37,7 +19,8 @@
   align-items: center;
 
   width: 25vw;
-  min-width: 310px;
+  min-width: 300px;
+  max-width: 90vw;
   padding: 3em;
   background-color: white;
   border-radius: 5px;
