Add tests for manager access logic

--- a/apps/frontend/src/app/components/document-widget/document-widget.component.html
+++ b/apps/frontend/src/app/components/document-widget/document-widget.component.html
@@ -17,7 +17,12 @@
   </div>
 
   <div class="action-bar-container">
-    <button mat-raised-button class="secondary-btn" (click)="updateDocumentDialog()">
+    <button
+      mat-raised-button
+      class="secondary-btn"
+      (click)="updateDocumentDialog()"
+      data-cy="document-edit-btn"
+    >
       Edit <mat-icon>https</mat-icon>
     </button>
     <button
