--- a/apps/frontend/src/app/components/manager-access-dialog/manager-access-dialog.component.html
+++ b/apps/frontend/src/app/components/manager-access-dialog/manager-access-dialog.component.html
@@ -1,4 +1,9 @@
-<form [formGroup]="managerAccessForm" (ngSubmit)="onSubmit()" class="dialog-container">
+<form
+  [formGroup]="managerAccessForm"
+  (ngSubmit)="onSubmit()"
+  class="dialog-container"
+  data-cy="manager-access-dialog"
+>
   <h1>Manager access</h1>
   <hr />
 
@@ -6,7 +11,14 @@
 
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Password</mat-label>
-    <input #password type="password" formControlName="password" matInput required />
+    <input
+      #password
+      type="password"
+      formControlName="password"
+      matInput
+      required
+      data-cy="manager-access-password-input"
+    />
     <mat-error *ngIf="errorMessage !== null">
       {{ errorMessage ? errorMessage : 'Required' }}
     </mat-error>
@@ -19,7 +31,12 @@
 
   <div class="dialog-row">
     <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
-    <button class="action-btn" mat-raised-button type="submit">
+    <button
+      class="action-btn"
+      mat-raised-button
+      type="submit"
+      data-cy="manager-access-continue-btn"
+    >
       <div *ngIf="!isLoading">Continue</div>
       <div *ngIf="isLoading" class="btn-spinner">
         <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
