--- a/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
@@ -1,4 +1,9 @@
-<form [formGroup]="createDocumentForm" (ngSubmit)="onSubmit()" class="dialog-container">
+<form
+  [formGroup]="createDocumentForm"
+  (ngSubmit)="onSubmit()"
+  class="dialog-container"
+  data-cy="create-document-dialog"
+>
   <h1>Add document</h1>
   <hr />
 
