--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -24,7 +24,12 @@
       </mat-form-field>
     </div>
 
-    <button mat-raised-button class="action-btn" (click)="openCreateDocumentDialog()">
+    <button
+      mat-raised-button
+      class="action-btn"
+      (click)="openCreateDocumentDialog()"
+      data-cy="documents-add-btn"
+    >
       Add document <mat-icon>https</mat-icon>
     </button>
   </div>
