feat: 🎸 display table info

--- a/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
+++ b/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
@@ -1,3 +1,10 @@
 <table> 
-  {{displayInfo?.tableName}}
+  <tr>
+    <th>Name</th>
+    <th>Explanation</th>
+  </tr>
+  <tr *ngFor="let attribute of displayInfo?.tableInformation">
+    <td>{{attribute.name}}</td>
+    <td>{{attribute.description}}</td>
+  </tr>
 </table>
