feat: 🎸 add close button

--- a/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
+++ b/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
@@ -2,6 +2,7 @@
   <tr class="header">
     <th>Name</th>
     <th>Explanation</th>
+    <button mat-dialog-close type="button" class="close-button">X</button>
   </tr>
   <tr *ngFor="let attribute of displayInfo?.tableInformation">
     <td class="name">{{ attribute.name }}</td>
