--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -77,3 +77,12 @@ h1 {
     stroke: white;
   }
 }
+
+.close-button {
+  background: transparent;
+  color: white;
+  font-size: 1em;
+  border: none;
+  padding: 10px;
+  margin-right: 10px;
+}
